Fix spacing in answers.

--- a/app/common/styles/apply.css
+++ b/app/common/styles/apply.css
@@ -15,6 +15,12 @@
     background-color: #ffd;
     border-bottom: 1px solid #7799bb;
 }
+
+.answer p {
+	margin: 0;
+	padding: 0;
+}
+
 .answer p.status {
   font-size: 80%;
   font-style: italic;
